--- a/elastic-job-lite-starter/elastic-job-lite-starter/pom.xml
+++ b/elastic-job-lite-starter/elastic-job-lite-starter/pom.xml
@@ -3,41 +3,64 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>paascloud-master</artifactId>
+    <artifactId>elastic-job-lite-starter-parent</artifactId>
     <groupId>com.liuzm.paascloud</groupId>
     <version>1.0</version>
   </parent>
-  <groupId>com.liuzm.paascloud.provider.api</groupId>
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
 
-  <artifactId>paascloud-provider-api</artifactId>
-
-  <modules>
-    <module>paascloud-provider-uac-api</module>
-    <module>paascloud-provider-mdc-api</module>
-    <module>paascloud-provider-omc-api</module>
-    <module>paascloud-provider-opc-api</module>
-    <module>paascloud-provider-tpc-api</module>
-    <module>paascloud-provider-sdk-api</module>
-  </modules>
+  <artifactId>elastic-job-lite-starter</artifactId>
 
   <dependencies>
     <dependency>
-      <groupId>com.liuzm.paascloud.common</groupId>
-      <artifactId>paascloud-common-base</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.liuzm.paascloud.common</groupId>
-      <artifactId>paascloud-security-feign</artifactId>
-      <version>1.0</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
+      <groupId>com.dangdang</groupId>
+      <artifactId>elastic-job-common-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.dangdang</groupId>
+      <artifactId>elastic-job-lite-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.dangdang</groupId>
+      <artifactId>elastic-job-lite-spring</artifactId>
+    </dependency>
+    <dependency>
+      <artifactId>curator-framework</artifactId>
+      <groupId>org.apache.curator</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>curator-recipes</artifactId>
+      <groupId>org.apache.curator</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>curator-client</artifactId>
+      <groupId>org.apache.curator</groupId>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>1.1.0</version>
     </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
