--- a/paascloud-common/paascloud-common-core/pom.xml
+++ b/paascloud-common/paascloud-common-core/pom.xml
@@ -23,6 +23,10 @@
             <groupId>com.liuzm.paascloud.common</groupId>
             <artifactId>paascloud-common-util</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>tk.mybatis</groupId>
@@ -46,6 +50,10 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.2</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.commons</groupId>-->
+            <!--<artifactId>commons-lang3</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
