--- a/paascloud-generator/pom.xml
+++ b/paascloud-generator/pom.xml
@@ -77,10 +77,16 @@
             <artifactId>mapper</artifactId>
             <version>3.3.9</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.liuzm.mybatis</groupId>-->
+            <!--<artifactId>mybatis-generator</artifactId>-->
+            <!--<version>1.0</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>com.liuzm.mybatis</groupId>
-            <artifactId>mybatis-generator</artifactId>
-            <version>1.0</version>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.7</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
