--- a/paascloud-provider/paascloud-provider-omc/pom.xml
+++ b/paascloud-provider/paascloud-provider-omc/pom.xml
@@ -70,16 +70,16 @@
             <artifactId>spring-boot-admin-starter-client</artifactId>
         </dependency>
         <!-- alipay start-->
-        <dependency>
-            <groupId>com.alipay</groupId>
-            <artifactId>alipay-sdk-java</artifactId>
-            <version>20170725114550</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alipay</groupId>
-            <artifactId>alipay-trade-sdk</artifactId>
-            <version>20161215</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.alipay</groupId>-->
+            <!--<artifactId>alipay-sdk-java</artifactId>-->
+            <!--<version>20170725114550</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.alipay</groupId>-->
+            <!--<artifactId>alipay-trade-sdk</artifactId>-->
+            <!--<version>20161215</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>commons-configuration</groupId>
             <artifactId>commons-configuration</artifactId>
